--- a/src/styles/_theme-components.scss
+++ b/src/styles/_theme-components.scss
@@ -22,3 +22,28 @@
     color: $label-danger-bg;
     border-color: $label-danger-bg;
 }
+
+.label-info {
+    color: $label-info-bg;
+    border-color: $label-info-bg;
+}
+
+// success/ok response text/label
+.response-ok {
+    color: $label-success-bg;
+}
+
+// informational response text/label
+.response-info {
+    color: $label-info-bg;
+}
+
+// client error response text/label
+.response-errc {
+    color: darken($label-warning-bg, 10%);
+}
+
+// server error reponse text/label
+.response-errs {
+    color: $label-warning-bg;
+}
