--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -20,7 +20,7 @@ $label-default-bg: $gray;
 $label-primary-bg: $brand-primary;
 $label-success-bg: $brand-success;
 $label-info-bg: $brand-info;
-$label-warning-bg: $brand-info;
+$label-warning-bg: $brand-warning;
 $label-danger-bg: $gray;
 
 $scrollbar-custom-track: #f1f1f1;
